[gd_scene load_steps=8 format=3 uid="uid://45i1on7bkk3u"]

[ext_resource type="Script" uid="uid://blletq4do04k3" path="res://scripts/GameColor.gd" id="1_hruif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hruif"]
bg_color = Color(0, 0, 0, 0.78431374)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.9019608)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2xfj"]
bg_color = Color(0.90588236, 0.90588236, 0.90588236, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaoyv"]
bg_color = Color(0, 0, 0, 0.19607843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsb58"]
bg_color = Color(0.90588236, 0.90588236, 0.90588236, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm70u"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kcdh"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ColorGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 254.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hruif")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -355.0
offset_right = 190.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hruif")

[node name="LabelMeaning" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -97.0
offset_right = 128.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_k2xfj")
text = "SIGNIFICADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelMeaningInfo" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -152.0
offset_right = 114.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_kaoyv")
text = "Significado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelColorInfo" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 21.0
offset_right = 115.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_kaoyv")
text = "Cor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelColor" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -34.0
offset_right = 129.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_wsb58")
text = "COR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNo" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 87.0
offset_right = -200.0
offset_bottom = 137.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sm70u")
text = "N√ÉO"

[node name="ButtonYes" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 12.0
offset_top = 247.0
offset_right = 162.0
offset_bottom = 297.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1kcdh")
text = "SIM"

[node name="TimerGame" type="Timer" parent="."]

[node name="TimerInterval" type="Timer" parent="."]
